--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -10,6 +10,7 @@ ul {
         padding: 1em;
         margin-right: 10px;
         margin-bottom: 1em;
+        width: 100%;
         display: flex;
         flex-direction: column;
 
