--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 $primary: rgb(111, 0, 255);
+
+.example-form-field {
+    width: 200px;
+}
 
 body {
     margin: 0;
@@ -48,4 +54,8 @@ header {
 
 h1 {
     margin-top: 2em;
+}
+
+h2, h3, h4 {
+    font-family: sans-serif;
 }
