made some awsesome design changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <header>
-  <div class="container">
-    <a href="#" class="logo">Combo Client</a>
+  <div class="header_container">
+    <img src="assets/combo_logo_sketch.png" class="logo"/>
     <nav>
       <ul>
         <li><a href="#" routerLink="/">Home</a></li>
