--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,10 @@
+.main-title {
+    font-size: 3em;
+    font-weight: 700;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
 span {
     font-weight: bold;
     background: lightgray;
