--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,8 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-$primary: rgb(111, 0, 255);
+$primary: rgb(224, 207, 51);
+$primary: rgb(119, 174, 196);
 
 .example-form-field {
     width: 200px;
@@ -16,17 +17,23 @@ body {
     font-size: 18px;
 }
 
+.header_container
+{
+    width: 95%;
+    margin: 0 auto;
+}
+
 .container {
-    width: 80%;
+    width: 82%;
     margin: 0 auto;
 }
 
 header {
     background: $primary;
-    padding: 1em 0;
+    padding: 0.7em 0;
 
     a {
-        color: white;
+        color: black;
         text-decoration: none;
     }
     a.logo {
@@ -43,7 +50,9 @@ header {
 
             li a {
                 padding: 1em;
-
+                font-size: 1.05em;
+                text-align: center;
+                line-height: 6em;
                 &:hover {
                     background: darken($primary, 10%);
                 }
@@ -56,6 +65,6 @@ h1 {
     margin-top: 2em;
 }
 
-h2, h3, h4 {
+a {
     font-family: sans-serif;
 }
