--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -36,3 +36,14 @@ ul {
 .example-form-field {
     margin-left: 5px;
 }
+
+.version-icon{
+   height: 25px; 
+   width: 25px;
+   margin-top: 1.2em;
+}
+
+.expension-panel{
+    width: 5000px;
+    display: flex;
+}
